EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==01/01/2009
Derision: Added chatserver for Chat Channel support. mail_opcodes.conf updated in utils.
Derision: See: http://www.eqemulator.net/wiki/wikka.php?wakka=ChatChannels

REQUIRED SQL:

CREATE TABLE `chatchannels` (
  `name` varchar(64) NOT NULL,
  `owner` varchar(64) NOT NULL,
  `password` varchar(64) NOT NULL,
  `minstatus` int(5) NOT NULL default '0',
  PRIMARY KEY  (`name`)
) ENGINE=MyISAM DEFAULT CHARSET=utf8;

also see utils/sql/svn/249_chatchannels.sql for suggested system channels.

==12/31/2008
Congdar: Bots: Added rule EQOffline:BotManaRegen default 1.0 is fastest. 3.0 is closer to player regen rates
Congdar: Bots: Added rule EQOffline:BotFinishBuffing default true. Allows out of combat buffing to complete even if the bot is out of mana.
Congdar: Bots: Fixed bug where bot ownership could change to somebody else.
Congdar: Bots: Added caster AA's for critical damage

==12/27/2008
Trevius: Changed QueryLoot so that commands that use it (#npcstats & #npcloot show) will now show Item Links instead of just Item Names.
Trevius: Added Item Links to #peekinv
Trevius: Added new console command "LSReconnect" to allow manually restarting the auto Login Server connect loops if they stopped for any reason
Trevius: Added a Reconnect option in the Web Tool to allow auto Login Server connect to restart if it has stopped and is not connected already.
Derision: New program, mailserver, to implement in-game mail. See: http://www.eqemulator.net/wiki/wikka.php?wakka=MailServer,
	  or mailserver/readme.txt

Required SQL:

CREATE TABLE `mail` (
  `msgid` int(10) unsigned NOT NULL auto_increment,
  `charid` int(10) unsigned NOT NULL,
  `timestamp` int(11) NOT NULL default '0',
  `from` varchar(100) NOT NULL,
  `subject` varchar(200) NOT NULL,
  `body` text NOT NULL,
  `to` text NOT NULL,
  `status` tinyint(4) NOT NULL,
  PRIMARY KEY  (`msgid`),